# julia-set-x86

./: CMakeLists.txt  README.md  julia.asm  julia.h  main.c
